# 2A-

./: LICENSE
Architecture_OS/: notes.md
Architecture_OS/kernel /sched/: completion.c  completion.md
Architecture_OS/kernel /sécurité informatique /: notes.md 
Architecture_OS/tps/tp_mémoire/ETUDIANT/hp_allocator/hp_allocator_malloc/: README_WRAPPER.md  SUMMARY.md  USAGE_WRAPPER.txt  demo_wrapper.sh  run_with_hp_malloc.sh  test_wrapper.sh
Architecture_OS/tps/tp_mémoire/ETUDIANT/hp_allocator/hp_allocator_malloc/SRC/: Makefile  a.out  hp_allocator.c  hp_allocator.h  main.c  malloc_wrapper.c
Architecture_OS/tps/tp_mémoire/ETUDIANT/hp_allocator/hp_allocator_malloc/include/: hp_allocator.h
Architecture_OS/tps/tp_mémoire/ETUDIANT/hp_allocator/hp_allocator_malloc_free/SRC/: Makefile  a.out  hp_allocator.c  hp_allocator.h  main.c
Architecture_OS/tps/tp_mémoire/ETUDIANT/svalat_bench/: Makefile  bench.c  bench.h  bench_huge  bench_malloc  courbe.py  main.c  main_huge.c  result_huge.csv  result_huge_clean.csv  result_malloc.csv  result_malloc_clean.csv  script.bash  script_courbe.bash
Architecture_OS/tps/tp_mémoire/ETUDIANT/svalat_bench_lib/: Makefile  README  README_BENCHMARK.md  USAGE.txt  bench.c  bench.h  bench_hp_malloc  clean_and_convert_to_csv.py  main.c  plot_benchmark.py  results_hp_malloc.csv  results_hp_malloc.txt  run_benchmark_pipeline.sh  show_summary.py
Assembleur_compilation/: notes.md
Assembleur_compilation/TPs/TP1/: ex1_1.s  ex1_2.s  ex1_3.s  ex1_4.s  ex1_5.s  ex1_7.s  ex2_ABDEL-WEDOUD-Yahdhih.s
Assembleur_compilation/TPs/TP2/: ex2_1.s
Assembleur_compilation/similator/: release
Assembleur_compilation/similator/lib/: classlist  jspawnhelper  libawt.dylib  libawt_lwawt.dylib  libfontmanager.dylib  libfreetype.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjimage.dylib  libjsig.dylib  libjsound.dylib  liblcms.dylib  libmlib_image.dylib  libnet.dylib  libnio.dylib  libosx.dylib  libosxapp.dylib  libosxsecurity.dylib  libosxui.dylib  libprefs.dylib  libsplashscreen.dylib  libverify.dylib  libzip.dylib
Assembleur_compilation/similator/lib/jli/: libjli.dylib
Assembleur_compilation/similator/lib/security/: cacerts
Asssembleur_compilation/: notes.md
Asssembleur_compilation/TPs /TP1 /: ex1_3.s
Langages_Objets_avancees/: notes.md  notes1.md  notes1_1.md  notes2.md  notes2.md 
Langages_Objets_avancees/Exercises/Basics/: Objects_Types_Values.cpp
Langages_Objets_avancees/TPs/01_-_TP_Note/: BoundedRandomGenerator.cpp  BoundedRandomGenerator.h  ExternalCheck.cpp  ExternalCheck.h  Makefile  RCheck.cpp  RCheck.h  StatFunctor.cpp  StatFunctor.h  TypeException.cpp  TypeException.h  check_TP_STL.R  main.cpp
Langages_Objets_avancees/TPs/TP0/: CMakeLists.txt
Langages_Objets_avancees/TPs/TP0/include/: BoundedRandom.h  ConstantSubstractor.h  IncrementalMeanOperator.h
Langages_Objets_avancees/TPs/TP0/src/: BoundedRandom.cpp  ConstantSubstractor.cpp  IncrementalMeanOperator.cpp  main.cpp
Langages_Objets_avancees/TPs/TP1/: CMakeLists.txt  extensions.md
Langages_Objets_avancees/TPs/TP1/archives/TP_STL-2025-09-18/include/: Arithmetic.h  RunException.h
Langages_Objets_avancees/TPs/TP1/archives/TP_STL-2025-09-18/include/checkers/: MatlabCheck.h
Langages_Objets_avancees/TPs/TP1/archives/TP_STL-2025-09-18/scripts/: check_TP_STL.R
Langages_Objets_avancees/TPs/TP1/archives/TP_STL-2025-09-18/src/checkers/: ExternalCheck.cpp  RCheck.cpp
Langages_Objets_avancees/TPs/TP1/include/checkers/: ExternalCheck.h  RCheck.h
Langages_Objets_avancees/TPs/TP1/include/functors/: BoundedRandomGenerator.h  StatFunctor.h
Langages_Objets_avancees/TPs/TP1/scripts/: check_TP_STL.m
Langages_Objets_avancees/TPs/TP1/src/: RunException.cpp  main.cpp
Langages_Objets_avancees/TPs/TP1/src/checkers/: MatlabCheck.cpp
Langages_Objets_avancees/TPs/TP1/src/functors/: BoundedRandomGenerator.cpp  StatFunctor.cpp
Langages_Objets_avancees/projets/GCPA Calcutor/: .gitignore  Makefile  README.md
Langages_Objets_avancees/projets/GCPA Calcutor/src/: main.cpp
Programmation_Scientifique/: notes.md
Programmation_parallele_MPI/: notes.md
